--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -8,5 +8,10 @@ This is an item in your portfolio. It can be have images or nice text.
 If you name the file .md, it will be parsed as markdown.
 If you name the file .html, it will be parsed as HTML. 
 
-<iframe id="igraph" scrolling="no" style="border:none;" seamless="seamless" src="https://github.com/DanieleDidino/DanieleDidino.github.io/blob/master/_includes/test1.html" height="525" width="100%"></iframe>
-
+<iframe id="igraph"
+        scrolling="no"
+        style="border:none;"
+        seamless="seamless"
+        src="images/test1.html"
+        height="525"
+        width="100%"></iframe>
