--- a/_portfolio/portfolio-2.html
+++ b/_portfolio/portfolio-2.html
@@ -12,6 +12,6 @@ If you name the file .html, it will be parsed as HTML.
         scrolling="no"
         style="border:none;"
         seamless="seamless"
-        src="images/test1.html"
+        src="/images/test1.html"
         height="525"
         width="100%"></iframe>
