--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -8,7 +8,7 @@ collection: portfolio
 <body>
     <h1>Welcome to My GitHub Pages Website</h1>
     <!-- Add a reference to the Plotly graph HTML file -->
-    <iframe src="plotly_graph.html" width="600" height="400"></iframe>
+    <iframe src="/images/test1.html" width="600" height="400"></iframe>
 </body>
 </html>
 
