--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -1,12 +1,13 @@
 ---
 title: "Portfolio item number 4"
-excerpt: "Short description of portfolio item number 4 <br/><img src='/images/500x300.png'>"
+excerpt: "Plotly example <br/><img src='/images/500x300.png'>"
 collection: portfolio
 ---
 
 <html lang="en">
 <body>
     <h1>Welcome to My GitHub Pages Website</h1>
+    <br/>
     <!-- Add a reference to the Plotly graph HTML file -->
     <iframe src="/images/test1.html" width="600" height="400"></iframe>
 </body>
