--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -10,6 +10,13 @@ collection: portfolio
     <br/>
     <!-- Add a reference to the Plotly graph HTML file -->
     <iframe src="/images/test1.html" width="600" height="400"></iframe>
+    <br/>
+    <iframe id="igraph"
+        scrolling="no"
+        style="border:none;"
+        seamless="seamless"
+        src="/images/test1.html"
+        height="400"
+        width="100%"></iframe>
 </body>
 </html>
-
