upload chatbot afa

--- a/_pages/LLM.html
+++ b/_pages/LLM.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Project1"
-permalink: /project1/
+title: "LLM"
+permalink: /LLM_projects/
 author_profile: true
 ---
 
 {% include base_path %}
 
 
-{% for post in site.project1 %}
+{% for post in site.LLM_projects %}
   {% include archive-single.html %}
 {% endfor %}
 
