--- a/_portfolio/portfolio-4.html
+++ b/_portfolio/portfolio-4.html
@@ -6,7 +6,7 @@ collection: portfolio
 
 <html lang="en">
 <body>
-    <h1>Welcome to My GitHub Pages Website</h1>
+    <h1>This is an example of a basic Plotly figure</h1>
     <br/>
     <!-- Add a reference to the Plotly graph HTML file -->
     <iframe id="igraph"
