add lines between sections in LLM page

--- a/_pages/LLM.html
+++ b/_pages/LLM.html
@@ -10,6 +10,6 @@ author_profile: true
 
 {% for post in site.LLM_projects %}
   {% include archive-single.html %}
-  <hr> <!-- Add a horizontal line between sections -->
+  <hr style="height: 3px;"> <!-- Add a horizontal line between sections -->
 {% endfor %}
 
