--- a/_pages/LLM.html
+++ b/_pages/LLM.html
@@ -10,6 +10,6 @@ author_profile: true
 
 {% for post in site.LLM_projects %}
   {% include archive-single.html %}
-  <hr style="height: 30px;"> <!-- Add a horizontal line between sections -->
+  <hr class="thick-hr"> <!-- Add a horizontal line between sections -->
 {% endfor %}
 
