--- a/_pages/data_modeling.html
+++ b/_pages/data_modeling.html
@@ -1,14 +1,14 @@
 ---
 layout: archive
-title: "Portfolio"
-permalink: /portfolio/
+title: "Data Modeling"
+permalink: /Data Modeling/
 author_profile: true
 ---
 
 {% include base_path %}
 
 
-{% for post in site.portfolio %}
+{% for post in site.Data Modeling %}
   {% include archive-single.html %}
   <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 {% endfor %}
