--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -7,11 +7,18 @@ author_profile: true
 
 {% include base_path %}
 
+<h1 align="center">
+  <b>Large Language Models</b> 
+  </h1>
 
 {% for post in site.LLM_projects %}
   {% include archive-single.html %}
   <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 {% endfor %}
+
+<h1 align="center">
+  <b>Data Visualization</b> 
+  </h1>
 
 {% for post in site.data_viz %}
   {% include archive-single.html %}
