--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -1,6 +1,6 @@
 ---
 layout: archive
-title: "Data Science & Projects"
+<!--title: "Data Science & Projects" -->
 permalink: /data_proj/
 author_profile: true
 ---
