--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -11,6 +11,25 @@ author_profile: true
   <b>Large Language Models</b> 
   </h3>
 
+<!-- Manually adding HTML pages for Large Language Models -->
+{% include archive-single.html url="/LLM_project/chatbot_afa.md" %}
+<hr style="height:3px; border:none; color:#333; background-color:#333;">
+
+<h3 align="left">
+  <b>Large Language Models 2</b> 
+  </h3>
+
+<div class="project-entry">
+  <a href="{{ site.baseurl }}/LLM_project/chatbot_afa.md">Project 1 Title</a>
+</div>
+<hr style="height:3px; border:none; color:#333; background-color:#333;">
+<div class="project-entry">
+  <a href="{{ site.baseurl }}/data_viz/videogame_sales.md">Project 2 Title</a>
+  <p>Brief description of Project 2</p>
+</div>
+<hr style="height:3px; border:none; color:#333; background-color:#333;">
+
+
 {% for post in site.LLM_projects %}
   {% include archive-single.html %}
   <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
