--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -7,37 +7,21 @@ author_profile: true
 
 {% include base_path %}
 
-<h3 align="left">
+<h2 align="left">
   <b>Large Language Models</b> 
-  </h3>
-
-<!-- Manually adding HTML pages for Large Language Models -->
-{% include archive-single.html url="/LLM_project/chatbot_afa.md" %}
-<hr style="height:3px; border:none; color:#333; background-color:#333;">
-
-<h3 align="left">
-  <b>Large Language Models 2</b> 
-  </h3>
-
-<div class="project-entry">
-  <a href="{{ site.baseurl }}/LLM_project/chatbot_afa.md">Project 1 Title</a>
-</div>
-<hr style="height:3px; border:none; color:#333; background-color:#333;">
-<div class="project-entry">
-  <a href="{{ site.baseurl }}/data_viz/videogame_sales.md">Project 2 Title</a>
-  <p>Brief description of Project 2</p>
-</div>
-<hr style="height:3px; border:none; color:#333; background-color:#333;">
-
+  </h2>
 
 {% for post in site.LLM_projects %}
   {% include archive-single.html %}
   <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 {% endfor %}
 
-<h3 align="left">
+
+<hr style="height:4px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+
+<h2 align="left">
   <b>Data Visualization</b> 
-  </h3>
+  </h2>
 
 {% for post in site.data_viz %}
   {% include archive-single.html %}
