--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -7,23 +7,24 @@ author_profile: true
 
 {% include base_path %}
 
-<h2 align="left">
+<h2 align="center">
   <b>Large Language Models</b> 
   </h2>
 
 {% for post in site.LLM_projects %}
-  {% include archive-single.html %}
-  <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+  <h2 align="center">
+    {% include archive-single.html %}
+    <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+  </h2>
 {% endfor %}
 
-
-<hr style="height:4px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
-
-<h2 align="left">
+<h2 align="center">
   <b>Data Visualization</b> 
   </h2>
 
 {% for post in site.data_viz %}
-  {% include archive-single.html %}
-  <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+  <h2 align="center">
+    {% include archive-single.html %}
+    <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+  </h2>
 {% endfor %}
