edit Data Science Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -6,8 +6,6 @@ author_profile: true
 ---
 
 <style>
-  h1 {text-align: center;}
-  p {text-align: center;}
   div {text-align: center;}
 </style>
 
@@ -29,8 +27,8 @@ author_profile: true
   </h1>
 
 {% for post in site.data_viz %}
-  <h2 align="center">
+  <div align="center">
     {% include archive-single.html %}
     <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
-  </h2>
+  </div>
 {% endfor %}
