--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -5,6 +5,10 @@ permalink: /data_proj/
 author_profile: true
 ---
 
+<style>
+  div {text-align: center;}
+</style>
+
 {% include base_path %}
 
 <h1 align="left">
