--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -7,9 +7,12 @@ author_profile: true
 
 <style>
   div {text-align: center;}
+  h1 {text-align: center;}
 </style>
 
 {% include base_path %}
+
+<hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 
 <h1 align="left">
   <b>Large Language Models</b> 
