edit Data Science Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -20,7 +20,7 @@ author_profile: true
 
 {% for post in site.LLM_projects %}
   {% include archive-single.html %}
-  <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+  <!-- <hr style="height:3px; border:none; color:#333; background-color:#333;"> --> <!-- Add a horizontal line between sections -->
 {% endfor %}
 
 <h1 align="left">
@@ -29,5 +29,5 @@ author_profile: true
 
 {% for post in site.data_viz %}
   {% include archive-single.html %}
-  <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+  <!-- <hr style="height:3px; border:none; color:#333; background-color:#333;"> --> <!-- Add a horizontal line between sections -->
 {% endfor %}
