--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -15,7 +15,7 @@ author_profile: true
 <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 
 <h1 align="left">
-  <b>Large Language Models</b> 
+  <p>Large Language Models</p> 
 </h1>
 
 {% for post in site.LLM_projects %}
@@ -23,8 +23,10 @@ author_profile: true
   <!-- <hr style="height:3px; border:none; color:#333; background-color:#333;"> --> <!-- Add a horizontal line between sections -->
 {% endfor %}
 
+<hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+
 <h1 align="left">
-  <b>Data Visualization</b> 
+  <p>Data Visualization</p> 
 </h1>
 
 {% for post in site.data_viz %}
