edit Data Science Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -14,9 +14,9 @@ author_profile: true
 
 <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 
-<h2 align="left">
-  <p>Large Language Models</p> 
-</h2>
+<h1 align="left">
+  <br>Large Language Models</br> 
+</h1>
 
 {% for post in site.LLM_projects %}
   {% include archive-single.html %}
@@ -25,9 +25,9 @@ author_profile: true
 
 <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 
-<h2 align="left">
-  <p>Data Visualization</p> 
-</h2>
+<h1 align="left">
+  <br>Data Visualization</br> 
+</h1>
 
 {% for post in site.data_viz %}
   {% include archive-single.html %}
