--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -6,7 +6,7 @@ author_profile: true
 ---
 
 <style>
-  div {text-align: center; width: 0%;}
+  div {text-align: center;}
   h1 {text-align: center;}
 </style>
 
