--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -11,7 +11,7 @@ author_profile: true
 
 {% include base_path %}
 
-<hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+<!-- <hr style="height:3px; border:none; color:#333; background-color:#333;"> --> <!-- Add a horizontal line between sections -->
 
 <h1 align="left">
   <br>Large Language Models</br> 
