edit Data Science Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -4,6 +4,13 @@ permalink: /data_proj/
 author_profile: true
 ---
 
+<!-- ---                              -->
+<!-- layout: archive                  -->
+<!-- title: "Data Science & Projects" -->
+<!-- permalink: /data_proj/           -->
+<!-- author_profile: true             -->
+<!-- ---                              -->
+
 <style>
   div {text-align: center;}
   h1 {text-align: center;}
