--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -19,8 +19,13 @@ author_profile: true
   <br>Large Language Models</br> 
 </h1>
 
-[Here](/dailogy/synthetic_data/) 
-<a href="/dailogy/synthetic_data/">Dailogy App</a>
+<h2 href="/dailogy/synthetic_data/">Dailogy App</h2>
+A System for Detecting and Improving Dysfunctional Language.<br/>
+
+<h1 align="center">
+  <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
+</h1>
+
 
 {% for post in site.LLM_projects %}
   {% include archive-single.html %}
