edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -19,12 +19,28 @@ author_profile: true
   <br>Large Language Models</br> 
 </h1>
 
-<h2 href="/dailogy/synthetic_data/">Dailogy App</h2>
-A System for Detecting and Improving Dysfunctional Language.<br/>
+<!-- Dailogy App -->
 
-<h1 align="center">
+<h2><a href="/dailogy/synthetic_data/">Dailogy App</a></h2>
+
+<h1 align="left">
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
 </h1>
+
+A System for Detecting and Improving Dysfunctional Language.<br/>
+
+<!-- Chatbot afa -->
+
+<h2><a href="/dailogy/synthetic_data/">Chatbot - <i>Agentur für Arbeit</i></a></h2>
+
+<h1 align="left">
+  <img src="/images/chatbot_afa_2.png" alt="drawing" width="100"/>
+</h1>
+
+Chat with the documents from the <i>Agentur für Arbeit</i>
+
+
+
 
 
 {% for post in site.LLM_projects %}
