--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -21,7 +21,7 @@ author_profile: true
 
 <!-- Dailogy App -->
 
-<h2><a href="/dailogy/synthetic_data/">Dailogy App</a></h2>
+<h2><a href="/_LLM_projects/1_dailogy.md">Dailogy App</a></h2>
 
 <h1 align="left">
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
@@ -31,10 +31,10 @@ A System for Detecting and Improving Dysfunctional Language.<br/>
 
 <!-- Chatbot afa -->
 
-<h2><a href="/dailogy/synthetic_data/">Chatbot - <i>Agentur für Arbeit</i></a></h2>
+<h2><a href="/_LLM_projects/2_chatbot_afa.md">Chatbot - <i>Agentur für Arbeit</i></a></h2>
 
 <h1 align="left">
-  <img src="/images/chatbot_afa_2.png" alt="drawing" width="100"/>
+  <img src="/images/chatbot_afa_2.png" alt="drawing" width="200"/>
 </h1>
 
 Chat with the documents from the <i>Agentur für Arbeit</i>
