edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -21,7 +21,7 @@ author_profile: true
 
 <!-- Dailogy App -->
 
-<h2><a href="../dailogy/dailogy.md">Dailogy App</a></h2>
+<h2><a href="./dailogy/dailogy.md">Dailogy App</a></h2>
 
 <h1 align="left">
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
