--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -13,6 +13,8 @@ author_profile: true
 
 <!-- {% include base_path %} -->
 
+{% include /dailogy/ %}
+
 <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 
 <h1 align="left">
