edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -21,7 +21,7 @@ author_profile: true
 
 <!-- Dailogy App -->
 
-<h2><a href="dailogy/dailogy.md">Dailogy App</a></h2>
+<h2><a href="dailogy/dailogy">Dailogy App</a></h2>
 
 <h1 align="left">
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
@@ -31,7 +31,7 @@ A System for Detecting and Improving Dysfunctional Language.<br/>
 
 <!-- Chatbot afa -->
 
-<h2><a href="/LLM_projects/2_chatbot_afa/">Chatbot - <i>Agentur für Arbeit</i></a></h2>
+<h2><a href="LLM_projects/2_chatbot_afa/">Chatbot - <i>Agentur für Arbeit</i></a></h2>
 
 <h1 align="left">
   <img src="/images/chatbot_afa_2.png" alt="drawing" width="200"/>
