--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -21,7 +21,7 @@ author_profile: true
 
 <!-- Dailogy App -->
 
-<h2><a href="dailogy/dailogy/">Dailogy App</a></h2>
+<h2><a href="LLM_projects/1_dailogy">Dailogy App</a></h2>
 
 <h1 align="left">
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
