edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -21,9 +21,7 @@ author_profile: true
 
 <!-- Dailogy App -->
 
-<h2><a href="../LLM_projects/1_dailogy/">Dailogy App</a></h2>
-
-<h2><a href="../dailogy/dailogy">Dailogy App</a></h2>
+<h2><a href="../LLM_projects/dailogy/">Dailogy App</a></h2>
 
 <h1 align="left">
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
@@ -33,22 +31,17 @@ A System for Detecting and Improving Dysfunctional Language.<br/>
 
 <!-- Chatbot afa -->
 
-<h2><a href="{{site.baseurl}}/LLM_projects/2_chatbot_afa/">Chatbot - <i>Agentur für Arbeit</i></a></h2>
+<h2><a href="{{site.baseurl}}/LLM_projects/chatbot_afa/">Chatbot - <i>Agentur für Arbeit</i></a></h2>
 
 <h1 align="left">
   <img src="/images/chatbot_afa_2.png" alt="drawing" width="200"/>
 </h1>
 
-Chat with the documents from the <i>Agentur für Arbeit</i>
+Chat with the documents from the <i>Agentur für Arbeit.</i>
 
-
-
-
-
-{% for post in site.LLM_projects %}
-  {% include archive-single.html %}
-  <!-- <hr style="height:3px; border:none; color:#333; background-color:#333;"> --> <!-- Add a horizontal line between sections -->
-{% endfor %}
+<!-- {% for post in site.LLM_projects %} -->
+<!--   {% include archive-single.html %} -->
+<!-- {% endfor %}                        -->
 
 <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 
@@ -60,3 +53,31 @@ Chat with the documents from the <i>Agentur für Arbeit</i>
   {% include archive-single.html %}
   <!-- <hr style="height:3px; border:none; color:#333; background-color:#333;"> --> <!-- Add a horizontal line between sections -->
 {% endfor %}
+
+
+
+<!-- Videogame Sales (1980-2016) -->
+
+<h2><a href="../data_viz/1_videogame_sales/">Videogame Sales (1980-2016)</a></h2>
+
+<h1 align="left">
+  <img src="/images/dashboard-videogame_sales.png" alt="drawing" width="100"/>
+</h1>
+
+Discover the Evolution of Video Game Sales.<br/>
+
+<!-- Airbnb Prices in European Cities -->
+
+<h2><a href="../data_viz/2_airbnb_europe/">Airbnb Prices in European Cities</i></a></h2>
+
+<h1 align="left">
+  <img src="/images/dashboard-airbnb.png" alt="drawing" width="200"/>
+</h1>
+
+Dive into an interactive Tableau Dashboard to explore pricing information 
+and more across nine major European cities: Amsterdam, Athens, Barcelona, 
+Berlin, Budapest, Lisbon, Paris, Rome, and Vienna.
+
+
+
+
