edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -27,9 +27,9 @@ author_profile: true
 
 <h2><a href="../LLM_projects/dailogy/">Dailogy App</a></h2>
 
-<h2 align="left">
+<p align="left">
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
-</h2>
+</p>
 
 A System for Detecting and Improving Dysfunctional Language.<br/>
 
