edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -37,9 +37,9 @@ A System for Detecting and Improving Dysfunctional Language.<br/>
 
 <h2><a href="{{site.baseurl}}/LLM_projects/chatbot_afa/">Chatbot - <i>Agentur für Arbeit</i></a></h2>
 
-<h2 align="left">
+<p align="left">
   <img src="/images/chatbot_afa_2.png" alt="drawing" width="200"/>
-</h2>
+</p>
 
 Chat with the documents from the <i>Agentur für Arbeit.</i>
 
@@ -61,9 +61,9 @@ Chat with the documents from the <i>Agentur für Arbeit.</i>
 
 <h2><a href="../data_viz/1_videogame_sales/">Videogame Sales (1980-2016)</a></h2>
 
-<h2 align="left">
+<p align="left">
   <img src="/images/dashboard-videogame_sales.png" alt="drawing" width="300"/>
-</h2>
+</p>
 
 Discover the Evolution of Video Game Sales.<br/>
 
@@ -71,14 +71,10 @@ Discover the Evolution of Video Game Sales.<br/>
 
 <h2><a href="../data_viz/2_airbnb_europe/">Airbnb Prices in European Cities</i></a></h2>
 
-<h2 align="left">
+<p align="left">
   <img src="/images/dashboard-airbnb.png" alt="drawing" width="300"/>
-</h2>
+</p>
 
 Dive into an interactive Tableau Dashboard to explore pricing information 
 and more across nine major European cities: Amsterdam, Athens, Barcelona, 
 Berlin, Budapest, Lisbon, Paris, Rome, and Vienna.
-
-
-
-
