edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -17,7 +17,7 @@ author_profile: true
 
 {% include base_path %}
 
-<hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+<hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line -->
 
 <h1 align="left">
   <br>Large Language Models</br> 
@@ -47,15 +47,15 @@ Chat with the documents from the <i>Agentur für Arbeit.</i>
 <!--   {% include archive-single.html %} -->
 <!-- {% endfor %}                        -->
 
-<hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
+<hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line -->
 
 <h1 align="left">
   <br>Data Visualization</br>
 </h1>
 
-{% for post in site.data_viz %}
-  {% include archive-single.html %}
-{% endfor %}
+<!-- {% for post in site.data_viz %}     -->
+<!--   {% include archive-single.html %} -->
+<!-- {% endfor %}                        -->
 
 <!-- Videogame Sales (1980-2016) -->
 
