edit description Dailogy project

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -25,13 +25,16 @@ author_profile: true
 
 <!-- Dailogy App -->
 
-<h2><a href="../LLM_projects/dailogy/">Dailogy App</a></h2>
+<h2><a href="../LLM_projects/dailogy/">Dailogy App</a></h2>: A System for Detecting and Improving Dysfunctional Language.<br/>
 
 <p align="left">
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
 </p>
 
-A System for Detecting and Improving Dysfunctional Language.<br/>
+This project is dedicated to developing an app designed to transform dysfunctional and toxic 
+language into more respectful and inclusive communication. Our current focus is on interactions 
+between couples or ex-couples who need to communicate regularly. By creating tools to detect and 
+mitigate harmful language, we aim to foster more respectful and inclusive conversations.<br/>
 
 <!-- Chatbot afa -->
 
