--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -31,6 +31,10 @@ author_profile: true
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
 </p>
 
+<div style="float: right; margin-left: 20px;">
+  <img src="/images/dailogy_logo.jpg" alt="Home Office" width="200">
+</div>
+
 This project is dedicated to developing an app designed to transform dysfunctional and toxic 
 language into more respectful and inclusive communication. Our current focus is on interactions 
 between couples or ex-couples who need to communicate regularly. By creating tools to detect and 
