minor edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -31,9 +31,11 @@ author_profile: true
   <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
 </p>
 
-<div style="float: right; margin-left: 20px;">
+<div style="float: left; margin-right: 20px;">
   <img src="/images/dailogy_logo.jpg" alt="Home Office" width="200">
 </div>
+
+A System for Detecting and Improving Dysfunctional Language.<br/>
 
 This project is dedicated to developing an app designed to transform dysfunctional and toxic 
 language into more respectful and inclusive communication. Our current focus is on interactions 
