minor edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -38,7 +38,9 @@ author_profile: true
 This project is dedicated to developing an app designed to transform dysfunctional and toxic 
 language into more respectful and inclusive communication. Our current focus is on interactions 
 between couples or ex-couples who need to communicate regularly. By creating tools to detect and 
-mitigate harmful language, we aim to foster more respectful and inclusive conversations.<br/>
+mitigate harmful language, we aim to foster more respectful and inclusive conversations.<br>
+
+<br><br>
 
 <!-- Chatbot afa -->
 
