minor edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -27,12 +27,8 @@ author_profile: true
 
 <h2><a href="../LLM_projects/dailogy/">Dailogy App</a></h2> A System for Detecting and Improving Dysfunctional Language.<br/>
 
-<p align="left">
-  <img src="/images/dailogy_logo.jpg" alt="drawing" width="100"/>
-</p>
-
 <div style="float: left; margin-right: 20px;">
-  <img src="/images/dailogy_logo.jpg" alt="Home Office" width="150">
+  <img src="/images/dailogy_logo.jpg" alt="Dailogy Logo" width="130">
 </div>
 
 This project is dedicated to developing an app designed to transform dysfunctional and toxic 
@@ -44,13 +40,25 @@ mitigate harmful language, we aim to foster more respectful and inclusive conver
 
 <!-- Chatbot afa -->
 
-<h2><a href="{{site.baseurl}}/LLM_projects/chatbot_afa/">Chatbot - <i>Agentur für Arbeit</i></a></h2>
+<h2 style="margin-top: 20px; margin-bottom: 20px;">
+  <a href="{{site.baseurl}}/LLM_projects/chatbot_afa/">Chatbot - <i>Agentur für Arbeit</i></a>
+</h2>
 
 <p align="left">
   <img src="/images/chatbot_afa_2.png" alt="drawing" width="200"/>
 </p>
 
 Chat with the documents from the <i>Agentur für Arbeit.</i>
+
+<div style="float: left; margin-right: 20px;">
+  <img src="/images/chatbot_afa_2.png" alt="Chatbot AfA" width="200">
+</div>
+
+This chatbot utilizes publicly available PDF documents from the <i>Agentur für Arbeit</i> as  its primary 
+data source. It responds to queries by leveraging these documents within a <b>RAG</b> (Retrieval-Augmented Generation) 
+pipeline framework. The chatbot not only provides answers but also includes source details, such as the title 
+and page number of the referenced documents.
+
 
 <!-- {% for post in site.LLM_projects %} -->
 <!--   {% include archive-single.html %} -->
