minor edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -57,7 +57,7 @@ Chat with the documents from the <i>Agentur für Arbeit.</i>
 This chatbot utilizes publicly available PDF documents from the <i>Agentur für Arbeit</i> as  its primary 
 data source. It responds to queries by leveraging these documents within a <b>RAG</b> (Retrieval-Augmented Generation) 
 pipeline framework. The chatbot not only provides answers but also includes source details, such as the title 
-and page number of the referenced documents.
+and page number of the referenced documents.<br>
 
 
 <!-- {% for post in site.LLM_projects %} -->
