minor edits Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -25,7 +25,7 @@ author_profile: true
 
 <!-- Dailogy App -->
 
-<h2><a href="../LLM_projects/dailogy/">Dailogy App</a></h2> A System for Detecting and Improving Dysfunctional Language.<br/>
+<h2><a href="../LLM_projects/dailogy/">Dailogy App</a></h2> A System for Detecting and Improving Dysfunctional Language.<br>
 
 <div style="float: left; margin-right: 20px;">
   <img src="/images/dailogy_logo.jpg" alt="Dailogy Logo" width="130">
@@ -44,15 +44,11 @@ mitigate harmful language, we aim to foster more respectful and inclusive conver
   <a href="{{site.baseurl}}/LLM_projects/chatbot_afa/">Chatbot - <i>Agentur für Arbeit</i></a>
 </h2>
 
-<p align="left">
-  <img src="/images/chatbot_afa_2.png" alt="drawing" width="200"/>
-</p>
-
 Chat with the documents from the <i>Agentur für Arbeit.</i>
 
-<div style="float: left; margin-right: 20px;">
+<figure style="float: left; margin-right: 20px;">
   <img src="/images/chatbot_afa_2.png" alt="Chatbot AfA" width="200">
-</div>
+</figure>
 
 This chatbot utilizes publicly available PDF documents from the <i>Agentur für Arbeit</i> as  its primary 
 data source. It responds to queries by leveraging these documents within a <b>RAG</b> (Retrieval-Augmented Generation) 
@@ -63,6 +59,8 @@ and page number of the referenced documents.<br>
 <!-- {% for post in site.LLM_projects %} -->
 <!--   {% include archive-single.html %} -->
 <!-- {% endfor %}                        -->
+
+<br><br>
 
 <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line -->
 
@@ -82,7 +80,7 @@ and page number of the referenced documents.<br>
   <img src="/images/dashboard-videogame_sales.png" alt="drawing" width="300"/>
 </p>
 
-Discover the Evolution of Video Game Sales.<br/>
+Discover the Evolution of Video Game Sales.<br>
 
 <!-- Airbnb Prices in European Cities -->
 
