--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -11,13 +11,50 @@ author_profile: true
 <!-- author_profile: true             -->
 <!-- ---                              -->
 
-<style>
-  h1 {text-align: center;}
-</style>
-
 {% include base_path %}
 
-<hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line -->
+<style>
+  h1 {
+    text-align: center;
+  }
+  .project {
+      margin-bottom: 20px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+  }
+  .project-title {
+      font-size: 24px;
+      margin: 0;
+  }
+  .project-description {
+      font-size: 16px;
+      margin: 5px 0;
+  }
+  .project-body {
+      display: flex;
+      align-items: flex-start;
+  }
+  .project-body img {
+      max-width: 150px;
+      margin-right: 15px;
+  }
+  .project-body p {
+      margin: 0;
+  }
+  hr {
+    height:3px;
+    border:none;
+    color:#333;
+    background-color:#333;
+    border-top: 1px solid #ccc;
+    margin: 20px 0;
+  }
+</style>
+
+
+
+<hr> <!-- Add a horizontal line -->
 
 <h1 align="left">
   <br>Large Language Models</br> 
@@ -25,18 +62,21 @@ author_profile: true
 
 <!-- Dailogy App -->
 
-<h2><a href="../LLM_projects/dailogy/">Dailogy App</a></h2> A System for Detecting and Improving Dysfunctional Language.<br>
-
-<div style="float: left; margin-right: 20px;">
-  <img src="/images/dailogy_logo.jpg" alt="Dailogy Logo" width="130">
+<div class="project">
+  <h2 class="project-title">
+      <a href="../LLM_projects/dailogy/" target="_blank">Dailogy App</a>
+  </h2>
+  <p class="project-description">A System for Detecting and Improving Dysfunctional Language.</p>
+  <div class="project-body">
+      <img src="/images/dailogy_logo.jpg" alt="Dailogy Logo" width="130">
+      <p>
+        This project is dedicated to developing an app designed to transform dysfunctional and toxic 
+        language into more respectful and inclusive communication. Our current focus is on interactions 
+        between couples or ex-couples who need to communicate regularly. By creating tools to detect and 
+        mitigate harmful language, we aim to foster more respectful and inclusive conversations.
+      </p>
+  </div>
 </div>
-
-This project is dedicated to developing an app designed to transform dysfunctional and toxic 
-language into more respectful and inclusive communication. Our current focus is on interactions 
-between couples or ex-couples who need to communicate regularly. By creating tools to detect and 
-mitigate harmful language, we aim to foster more respectful and inclusive conversations.<br>
-
-<br><br>
 
 <!-- Chatbot afa -->
 
@@ -46,9 +86,9 @@ mitigate harmful language, we aim to foster more respectful and inclusive conver
 
 Chat with the documents from the <i>Agentur für Arbeit.</i>
 
-<figure style="float: left; margin-right: 20px;">
+<div style="float: left; margin-right: 20px;">
   <img src="/images/chatbot_afa_2.png" alt="Chatbot AfA" width="200">
-</figure>
+</div>
 
 This chatbot utilizes publicly available PDF documents from the <i>Agentur für Arbeit</i> as  its primary 
 data source. It responds to queries by leveraging these documents within a <b>RAG</b> (Retrieval-Augmented Generation) 
@@ -62,7 +102,7 @@ and page number of the referenced documents.<br>
 
 <br><br>
 
-<hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line -->
+<hr> <!-- Add a horizontal line -->
 
 <h1 align="left">
   <br>Data Visualization</br>
