new html for Data Science and Projects page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -52,8 +52,6 @@ author_profile: true
   }
 </style>
 
-
-
 <hr> <!-- Add a horizontal line -->
 
 <h1 align="left">
@@ -61,7 +59,6 @@ author_profile: true
 </h1>
 
 <!-- Dailogy App -->
-
 <div class="project">
   <h2 class="project-title">
       <a href="../LLM_projects/dailogy/" target="_blank">Dailogy App</a>
@@ -79,28 +76,21 @@ author_profile: true
 </div>
 
 <!-- Chatbot afa -->
-
-<h2 style="margin-top: 20px; margin-bottom: 20px;">
-  <a href="{{site.baseurl}}/LLM_projects/chatbot_afa/">Chatbot - <i>Agentur für Arbeit</i></a>
-</h2>
-
-Chat with the documents from the <i>Agentur für Arbeit.</i>
-
-<div style="float: left; margin-right: 20px;">
-  <img src="/images/chatbot_afa_2.png" alt="Chatbot AfA" width="200">
+<div class="project">
+  <h2 class="project-title">
+      <a href="{{site.baseurl}}/LLM_projects/chatbot_afa/" target="_blank">Chatbot - <i>Agentur für Arbeit</i></a>
+  </h2>
+  <p class="project-description">Chat with the documents from the <i>Agentur für Arbeit.</i></p>
+  <div class="project-body">
+      <img src="/images/chatbot_afa_2.png" alt="Chatbot AfA" width="200">
+      <p>
+        This chatbot utilizes publicly available PDF documents from the <i>Agentur für Arbeit</i> as  its primary 
+        data source. It responds to queries by leveraging these documents within a <b>RAG</b> (Retrieval-Augmented Generation) 
+        pipeline framework. The chatbot not only provides answers but also includes source details, such as the title 
+        and page number of the referenced documents.
+      </p>
+  </div>
 </div>
-
-This chatbot utilizes publicly available PDF documents from the <i>Agentur für Arbeit</i> as  its primary 
-data source. It responds to queries by leveraging these documents within a <b>RAG</b> (Retrieval-Augmented Generation) 
-pipeline framework. The chatbot not only provides answers but also includes source details, such as the title 
-and page number of the referenced documents.<br>
-
-
-<!-- {% for post in site.LLM_projects %} -->
-<!--   {% include archive-single.html %} -->
-<!-- {% endfor %}                        -->
-
-<br><br>
 
 <hr> <!-- Add a horizontal line -->
 
@@ -108,28 +98,35 @@ and page number of the referenced documents.<br>
   <br>Data Visualization</br>
 </h1>
 
-<!-- {% for post in site.data_viz %}     -->
-<!--   {% include archive-single.html %} -->
-<!-- {% endfor %}                        -->
-
 <!-- Videogame Sales (1980-2016) -->
-
-<h2><a href="../data_viz/videogame_sales/">Videogame Sales (1980-2016)</a></h2>
-
-<p align="left">
-  <img src="/images/dashboard-videogame_sales.png" alt="drawing" width="300"/>
-</p>
-
-Discover the Evolution of Video Game Sales.<br>
+<div class="project">
+  <h2 class="project-title">
+      <a href="../data_viz/videogame_sales/" target="_blank">Videogame Sales (1980-2016)</i></a>
+  </h2>
+  <p class="project-description">Discover the Evolution of Video Game Sales.</i></p>
+  <div class="project-body">
+      <img src="/images/dashboard-videogame_sales.png" alt="Dashboard Videogame Sales" width="300">
+      <p>
+        Explore my interactive Tableau Dashboard that delves into the dynamic world of video game 
+        sales from 1980 to 2016. This comprehensive visualization breaks down the sales data by 
+        genre and market, including global, North America (USA, Canada), Europe, and Japan. Users 
+        can personalize the view by selecting specific year ranges to focus on trends that matter most.
+      </p>
+  </div>
+</div>
 
 <!-- Airbnb Prices in European Cities -->
-
-<h2><a href="../data_viz/airbnb_europe/">Airbnb Prices in European Cities</i></a></h2>
-
-<p align="left">
-  <img src="/images/dashboard-airbnb.png" alt="drawing" width="300"/>
-</p>
-
-Dive into an interactive Tableau Dashboard to explore pricing information 
-and more across nine major European cities: Amsterdam, Athens, Barcelona, 
-Berlin, Budapest, Lisbon, Paris, Rome, and Vienna.
+<div class="project">
+  <h2 class="project-title">
+      <a href="../data_viz/airbnb_europe/" target="_blank">Airbnb Prices in European Cities</i></a>
+  </h2>
+  <p class="project-description">Explore pricing information for Airbnb accommodations.</i></p>
+  <div class="project-body">
+      <img src="/images/dashboard-airbnb.png" alt="Dashboard Airbnb" width="300">
+      <p>
+        Dive into an interactive Tableau Dashboard to explore comprehensive pricing information and 
+        more across nine major European cities: Amsterdam, Athens, Barcelona, Berlin, Budapest, 
+        Lisbon, Paris, Rome, and Vienna.
+      </p>
+  </div>
+</div>
