--- a/_pages/statistics.html
+++ b/_pages/statistics.html
@@ -1,15 +1,83 @@
 ---
 layout: archive
-title: "Statistics"
 permalink: /statistics/
 author_profile: true
 ---
 
+<!-- ---                      -->
+<!-- layout: archive          -->
+<!-- title: "Statistics"      -->
+<!-- permalink: /statistics/  -->
+<!-- author_profile: true     -->
+<!-- ---                      -->
+
+
+
 {% include base_path %}
 
+<style>
+  h1 {
+    text-align: center;
+  }
+  .project {
+      margin-bottom: 20px;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+  }
+  .project-title {
+      font-size: 24px;
+      margin: 0;
+  }
+  .project-description {
+      font-size: 16px;
+      margin: 5px 0;
+  }
+  .project-body {
+      display: flex;
+      align-items: flex-start;
+  }
+  .project-body img {
+      max-width: 150px;
+      margin-right: 15px;
+  }
+  .project-body p {
+      margin: 0;
+  }
+  hr {
+    height:3px;
+    border:none;
+    color:#333;
+    background-color:#333;
+    border-top: 1px solid #ccc;
+    margin: 20px 0;
+  }
+</style>
 
 {% for post in site.statistics %}
   {% include archive-single.html %}
   <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
 {% endfor %}
+
+<hr> <!-- Add a horizontal line -->
+
+<h1 align="left">
+  <br>Bayesian modelling</br> 
+</h1>
+
+<!-- Dailogy App -->
+<div class="project">
+  <h2 class="project-title">
+      <a href="../statistics/BA" target="_blank">Regression - Bayesian modelling</a>
+  </h2>
+  <p class="project-description">Regression with Bayesian models.</p>
+  <div class="project-body">
+      <img src="/images/BA_1.png" alt="Bayesian modelling 1" width="200">
+      <p>
+        <i>Coming soon!</i>
+      </p>
+  </div>
+</div>
+
+
 
