edit Statistics and Research page

--- a/_pages/statistics.html
+++ b/_pages/statistics.html
@@ -54,18 +54,13 @@ author_profile: true
   }
 </style>
 
-{% for post in site.statistics %}
-  {% include archive-single.html %}
-  <hr style="height:3px; border:none; color:#333; background-color:#333;"> <!-- Add a horizontal line between sections -->
-{% endfor %}
-
 <hr> <!-- Add a horizontal line -->
 
 <h1 align="left">
   <br>Bayesian modelling</br> 
 </h1>
 
-<!-- Dailogy App -->
+<!-- Regression - Bayesian -->
 <div class="project">
   <h2 class="project-title">
       <a href="../statistics/BA" target="_blank">Regression - Bayesian modelling</a>
