--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -11,6 +11,10 @@ author_profile: true
 <!-- author_profile: true             -->
 <!-- ---                              -->
 
+<head>
+  <link rel="icon" href="/assets/favicon.jpg" type="image/x-icon">
+</head>
+
 {% include base_path %}
 
 <style>
