--- a/_pages/statistics.html
+++ b/_pages/statistics.html
@@ -11,7 +11,9 @@ author_profile: true
 <!-- author_profile: true     -->
 <!-- ---                      -->
 
-
+<head></head>
+  <link rel="icon" href="/assets/favicon.jpg" type="image/x-icon">
+</head>
 
 {% include base_path %}
 
