--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -65,7 +65,7 @@ author_profile: true
 <!-- Dailogy App -->
 <div class="project">
   <h2 class="project-title">
-      <a href="../LLM_projects/dailogy/" target="_blank">Dailogy App</a>
+      <a href="../LLM_projects/dailogy/" target="_self">Dailogy App</a>
   </h2>
   <p class="project-description">A System for Detecting and Improving Dysfunctional Language.</p>
   <div class="project-body">
@@ -82,7 +82,7 @@ author_profile: true
 <!-- Chatbot afa -->
 <div class="project">
   <h2 class="project-title">
-      <a href="{{site.baseurl}}/LLM_projects/chatbot_afa/" target="_blank">Chatbot - <i>Agentur für Arbeit</i></a>
+      <a href="{{site.baseurl}}/LLM_projects/chatbot_afa/" target="_self">Chatbot - <i>Agentur für Arbeit</i></a>
   </h2>
   <p class="project-description">Chat with the documents from the <i>Agentur für Arbeit.</i></p>
   <div class="project-body">
@@ -105,7 +105,7 @@ author_profile: true
 <!-- Videogame Sales (1980-2016) -->
 <div class="project">
   <h2 class="project-title">
-      <a href="../data_viz/videogame_sales/" target="_blank">Videogame Sales (1980-2016)</i></a>
+      <a href="../data_viz/videogame_sales/" target="_self">Videogame Sales (1980-2016)</i></a>
   </h2>
   <p class="project-description">Discover the Evolution of Video Game Sales.</i></p>
   <div class="project-body">
@@ -122,7 +122,7 @@ author_profile: true
 <!-- Airbnb Prices in European Cities -->
 <div class="project">
   <h2 class="project-title">
-      <a href="../data_viz/airbnb_europe/" target="_blank">Airbnb Prices in European Cities</i></a>
+      <a href="../data_viz/airbnb_europe/" target="_self">Airbnb Prices in European Cities</i></a>
   </h2>
   <p class="project-description">Explore pricing information for Airbnb accommodations.</i></p>
   <div class="project-body">
