--- a/_pages/statistics.html
+++ b/_pages/statistics.html
@@ -65,7 +65,7 @@ author_profile: true
 <!-- Regression - Bayesian -->
 <div class="project">
   <h2 class="project-title">
-      <a href="../statistics/BA" target="_blank">Regression - Bayesian modelling</a>
+      <a href="../statistics/BA" target="_self">Regression - Bayesian modelling</a>
   </h2>
   <p class="project-description">Regression with Bayesian models.</p>
   <div class="project-body">
