minor edit data viz page

--- a/_pages/data_viz.html
+++ b/_pages/data_viz.html
@@ -61,9 +61,9 @@ author_profile: true
 <!--   <hr style="height:3px; border:none; color:#333; background-color:#333;"> --> <!-- Add a horizontal line between sections -->
 <!-- {% endfor %}                                                               -->
 
-<h1 align="left">
-  <br>Data Visualization</br>
-</h1>
+<!-- <h1 align="left">             -->
+<!--   <br>Data Visualization</br> -->
+<!-- </h1>                         -->
 
 <!-- Videogame Sales (1980-2016) -->
 <div class="project">
