edit data project page

--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -56,11 +56,11 @@ author_profile: true
   }
 </style>
 
-<hr> <!-- Add a horizontal line -->
+<!-- <hr> --> <!-- Add a horizontal line -->
 
-<h1 align="left">
-  <br>Large Language Models</br> 
-</h1>
+<!-- <h1 align="left">                 -->
+<!--   <br>Large Language Models</br>  -->
+<!-- </h1>                             -->
 
 <!-- Dailogy App -->
 <div class="project">
@@ -92,45 +92,6 @@ author_profile: true
         data source. It responds to queries by leveraging these documents within a <b>RAG</b> (Retrieval-Augmented Generation) 
         pipeline framework. The chatbot not only provides answers but also includes source details, such as the title 
         and page number of the referenced documents.
-      </p>
-  </div>
-</div>
-
-<hr> <!-- Add a horizontal line -->
-
-<h1 align="left">
-  <br>Data Visualization</br>
-</h1>
-
-<!-- Videogame Sales (1980-2016) -->
-<div class="project">
-  <h2 class="project-title">
-      <a href="../data_viz/videogame_sales/" target="_self">Videogame Sales (1980-2016)</i></a>
-  </h2>
-  <p class="project-description">Discover the Evolution of Video Game Sales.</i></p>
-  <div class="project-body">
-      <img src="/images/dashboard-videogame_sales.png" alt="Dashboard Videogame Sales" width="300">
-      <p>
-        Explore my interactive Tableau Dashboard that delves into the dynamic world of video game 
-        sales from 1980 to 2016. This comprehensive visualization breaks down the sales data by 
-        genre and market, including global, North America (USA, Canada), Europe, and Japan. Users 
-        can personalize the view by selecting specific year ranges to focus on trends that matter most.
-      </p>
-  </div>
-</div>
-
-<!-- Airbnb Prices in European Cities -->
-<div class="project">
-  <h2 class="project-title">
-      <a href="../data_viz/airbnb_europe/" target="_self">Airbnb Prices in European Cities</i></a>
-  </h2>
-  <p class="project-description">Explore pricing information for Airbnb accommodations.</i></p>
-  <div class="project-body">
-      <img src="/images/dashboard-airbnb.png" alt="Dashboard Airbnb" width="300">
-      <p>
-        Dive into an interactive Tableau Dashboard to explore comprehensive pricing information and 
-        more across nine major European cities: Amsterdam, Athens, Barcelona, Berlin, Budapest, 
-        Lisbon, Paris, Rome, and Vienna.
       </p>
   </div>
 </div>
