--- a/_pages/data_proj.html
+++ b/_pages/data_proj.html
@@ -65,7 +65,8 @@ author_profile: true
 <!-- Dailogy App -->
 <div class="project">
   <h2 class="project-title">
-      <a href="../LLM_projects/dailogy/" target="_self">Dailogy App</a>
+      <!-- <a href="../LLM_projects/dailogy/" target="_self">Dailogy App</a> -->
+      <a href="../LLM_projects/dailogy/" target="_self">An App for Detecting and Transforming Toxic Language</a>     
   </h2>
   <p class="project-description">A System for Detecting and Improving Dysfunctional Language.</p>
   <div class="project-body">
